Minor UI changes - Fixed floating label not hiding all of the border behind it - Library grid now decrease columns when in medium screens - Changed labels on date filters on search bar - Changed form widths in account settings page

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -4,7 +4,7 @@
 
 html {
     font-family: Inter;
-    @apply text-[12px] lg:text-[16px];
+    @apply text-[14px] lg:text-[16px];
 }
 
 input {
